umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyleneglycol.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cq
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{O/2H1v1}"
      - "{O/2H1v1}"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cq
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{O/2H1v1}"
      - "{O/2H1v1}"
    bonds:
      - "-"
      - "-"
      - "-"
