umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_hydroxycyclopropane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Ct
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 4
    topology: Ct
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CHv3}"
      - "{OH/2v1}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
