umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-azide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "N#n#v3"
      - "N#c+#v4"
      - "N#c-#n2#v2"
    bonds:
      - "-"
      - "="
      - "="
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "C#h3#v"
      - "N#n#v3"
      - "N#c+#v4"
      - "N#c-#n2#v2"
    bonds:
      - "-"
      - "="
      - "="
