umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_methyl-cyanate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 1 has 3 valence matches: {O/2v2}, {O/1v2a2}, {O+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{CH3v1}"
      - "{O/2v2}"
      - "{Cv4}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "#"
